k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: smartstock
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: smartstock-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          # Se usar proxy reverso no Nginx, descomente e ajuste:
          # env:
          #   - name: API_URL
          #     value: "http://backend-svc:8080"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
